# collecta

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  release.yml
crates/collecta-core/: Cargo.toml
crates/collecta-core/src/: attachment.rs  error.rs  form.rs  lib.rs  submission.rs  sync_protocol.rs  sync_queue.rs  validation.rs
crates/collecta-core/tests/: collecta_tests.rs
crates/collecta-server/: Cargo.toml
crates/collecta-server/src/: auth.rs  lib.rs  main.rs  store.rs
crates/collecta-server/tests/: server_tests.rs
crates/collecta-xlsform/: Cargo.toml
crates/collecta-xlsform/src/: lib.rs
crates/collecta-xlsform/tests/: parse.rs
docs/: index.html
