[package]
name = "collecta-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Field data collection engine — form schemas, validation, offline queue, sync"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
