[package]
name = "collecta-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Collecta REST API server — form management, submission ingestion, sync endpoints"

[dependencies]
collecta-core = { path = "../collecta-core" }
collecta-xlsform = { path = "../collecta-xlsform" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
rust_xlsxwriter = "0.96"
